--- a/app/book.component.html
+++ b/app/book.component.html
@@ -4,6 +4,8 @@
 <h2>{{title}} </h2>
 <h3>{{price}} </h3>
 
+<span innerHTML="title"></span>
+
 <ul>
     <li *ngFor="let c of chapters"> {{c}} </li>
 </ul>    
