--- a/app/binding.component.html
+++ b/app/binding.component.html
@@ -10,3 +10,7 @@
 <button (click)="toggleBold()">Toggle Bold</button>
 <button (click)="toggleBig()">Toggle Big</button>
 
+<div *ngIf="false">This is with ngIF </div>
+
+<div [style.visibility]="'hidden'">This is with Visibility </div>
+
