--- a/app/forms/reactive-login.component.html
+++ b/app/forms/reactive-login.component.html
@@ -20,13 +20,15 @@
             <span *ngIf="loginForm.controls.password.errors?.required">
               Password must be entered!
             </span>
-             <span *ngIf="loginForm.controls.password.errors?.mustHaveStar">
+             <span *ngIf="loginForm.controls.password.errors.mustHaveStar">
                      Password must have a star (*)
             </span>
              {{ loginForm.controls.password.errors | json}}
          </span>
         <p></p>
-        <div *ngIf="loginForm.errors?.misMatch && isSubmitted">Password and username cannot be same</div>
+        <div *ngIf="loginForm.errors?.misMatch && isSubmitted">
+             Password and username cannot be same
+        </div>
         <button>Login</button>
         <p></p>
         {{ loginForm.errors | json }}
